Fix button shadow getting truncated.
That’s a bad look.

--- a/static/scss/pages/_roll-detail.scss
+++ b/static/scss/pages/_roll-detail.scss
@@ -1,7 +1,7 @@
 .development { background: $light; }
 
 .journal-entries {
-    margin-top: 3rem;
+    margin: 3rem 0;
 
     table {
         width: 100%;
